# SelectiveSegmentation

./: .gitignore  HANDOFF.md  METHODS.md  README.md  RESULTS.md  conftest.py  pyproject.toml  requirements.txt
configs/: binary_midpoint_dual_pilot.json  binary_midpoint_main.json  binary_midpoint_main_v2.json  binary_midpoint_pilot.json  binary_midpoint_smoke_v1.json  extension.json  table_completion.json
docs/: FINDINGS.md  MECHANISM_STUDY.md  PLAN.md  README.md  main.tex  references.bib  theory_appendix.tex
results/: analysis.json  cardinality_diagnostics.json  diagnostics_analysis.json  dice_count_posterior_analysis.json  dice_partition_ladder_analysis.json  gamma_sensitivity.json  hd95_contamination.json  m128_numerical_reference.json  main_table.csv  matched_risk_reliability.json  public_provenance.json  public_provenance_v2.json  qualitative_selection.json  runtime_ladder_v2.lock.json  runtime_ladder_v2_analysis.json  runtime_ladder_v2_export.json  runtime_v1_analysis.json  runtime_v1_export.json  seed_provenance.json  seed_replay.complete.json  seed_replay.lock.json  seed_robustness_analysis.json  seed_scheduler_summary.json  synthetic_coupling_matrix_analysis.json  synthetic_posterior_analysis.json  synthetic_posterior_export.json  synthetic_posterior_pilot_analysis.json  synthetic_posterior_pilot_export.json  working_risk_diagnostics.json
scripts/: adjust_seed_downstream_timelimits.py  analyze_auxiliary_experiments.py  analyze_binary.py  analyze_binary_auxiliary.py  analyze_binary_diagnostics.py  analyze_binary_runtime.py  analyze_binary_seed_extension.py  (+58 more)
(+423 files in other folders)
