[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "selective-segmentation"
version = "0.1.0"
description = "Loss-indexed confidence for selective segmentation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "Pillow>=10",
    "scipy>=1.11",
    "torch>=2.2",
    "torchvision>=0.17",
    "tqdm>=4.66",
    "transformers>=4.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]
plots = ["matplotlib>=3.8"]

[project.scripts]
selectseg-train = "selectseg.train:main"
selectseg-binary-eval = "selectseg.evaluate:main"

[tool.setuptools.packages.find]
include = ["selectseg*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py310"
line-length = 88
extend-exclude = [
    "checkpoints",
    "data",
    "docs",
    "outputs",
    "overleaf",
    "scratch_attack",
    "scratch_refresh",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
